Added Soft Delete into Product Aggregate.